--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "deploy": "gh-pages -d dist"
   },
